src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__fib.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

fn fib_rec(n) {
  if n < 2 {
    n
  } else {
    fib(n-1) + fib(n-2)
  }
}

fn fib_iter(n) {
  if n < 2 { return n }

  let prev = 0
  let curr = 1
  let i = 2
  loop {
    if i > n { break }
    i += 1

    let next = prev + curr
    prev = curr
    curr = next
  }

  return curr
}

OK
Root(
    [
        FuncDecl(
            Ident(
                "fib_rec",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Lt,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int32(
                                    2,
                                ),
                            ),
                            Some(
                                Block(
                                    [
                                        StmtExpr(
                                            Infix(
                                                Add,
                                                Call(
                                                    GetVar(
                                                        Ident(
                                                            "fib",
                                                        ),
                                                    ),
                                                    [
                                                        Infix(
                                                            Sub,
                                                            GetVar(
                                                                Ident(
                                                                    "n",
                                                                ),
                                                            ),
                                                            Int32(
                                                                1,
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                                Call(
                                                    GetVar(
                                                        Ident(
                                                            "fib",
                                                        ),
                                                    ),
                                                    [
                                                        Infix(
                                                            Sub,
                                                            GetVar(
                                                                Ident(
                                                                    "n",
                                                                ),
                                                            ),
                                                            Int32(
                                                                2,
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            [
                                StmtExpr(
                                    GetVar(
                                        Ident(
                                            "n",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
        FuncDecl(
            Ident(
                "fib_iter",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Lt,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int32(
                                    2,
                                ),
                            ),
                            None,
                            [
                                StmtExpr(
                                    Return(
                                        Some(
                                            GetVar(
                                                Ident(
                                                    "n",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                    Var(
                        Ident(
                            "prev",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    Var(
                        Ident(
                            "curr",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                    Var(
                        Ident(
                            "i",
                        ),
                        Int32(
                            2,
                        ),
                    ),
                    Loop(
                        [
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Gt,
                                        GetVar(
                                            Ident(
                                                "i",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "n",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Break,
                                        ),
                                    ],
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    Add,
                                    GetVar(
                                        Ident(
                                            "i",
                                        ),
                                    ),
                                    Int32(
                                        1,
                                    ),
                                ),
                            ),
                            Var(
                                Ident(
                                    "next",
                                ),
                                Infix(
                                    Add,
                                    GetVar(
                                        Ident(
                                            "prev",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    None,
                                    GetVar(
                                        Ident(
                                            "prev",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    None,
                                    GetVar(
                                        Ident(
                                            "curr",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "next",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                    StmtExpr(
                        Return(
                            Some(
                                GetVar(
                                    Ident(
                                        "curr",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
    ],
)
