src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_bare_missing_binding.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import "module" as

ERROR
expected '<ident>', found '<eof>'
3 |  import "module" as
  |                    ^
