src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_incomplete_alias.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import {foo as} from "module"

ERROR
expected '<ident>', found '}'
3 |  import {foo as} from "module"
  |                ^
