src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_missing_from.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

// NOTE: parsed as bare import and a string literal, which is fine
import foo "module"

OK
Root(
    [
        ImportBare(
            Str(
                "foo",
            ),
            Ident(
                "foo",
            ),
        ),
        StmtExpr(
            Str(
                "module",
            ),
        ),
    ],
)
