src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_missing_items.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import from "module"

ERROR
expected '<ident>', found 'from'
3 |  import from "module"
  |         ^^^^
