src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_missing_path.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import foo from

ERROR
expected '<string>', found '<eof>'
3 |  import foo from
  |                 ^
