src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__ints.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

let zero = 0
let one = 1
let i32_max = 2_147_483_647
let i64_max = 9_223_372_036_854_775_807


OK
Root(
    [
        Var(
            Ident(
                "zero",
            ),
            Int32(
                0,
            ),
        ),
        Var(
            Ident(
                "one",
            ),
            Int32(
                1,
            ),
        ),
        Var(
            Ident(
                "i32_max",
            ),
            Int32(
                2147483647,
            ),
        ),
        Var(
            Ident(
                "i64_max",
            ),
            Int64(
                9223372036854775807,
            ),
        ),
    ],
)
