src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__list.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

let empty = []

let single = [0]
let single_tc = [0,]

let multi = [0, 1, 2]
let multi_tc = [0, 1, 2,]

OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            List(
                [],
            ),
        ),
        Var(
            Ident(
                "single",
            ),
            List(
                [
                    Int32(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_tc",
            ),
            List(
                [
                    Int32(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi",
            ),
            List(
                [
                    Int32(
                        0,
                    ),
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_tc",
            ),
            List(
                [
                    Int32(
                        0,
                    ),
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                ],
            ),
        ),
    ],
)
