src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__logic.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

true or false and true or false

let b = ((true or (false and true)) or false)

let c = not true and not false


OK
Root(
    [
        StmtExpr(
            Infix(
                Or,
                Infix(
                    Or,
                    Bool(
                        true,
                    ),
                    Infix(
                        And,
                        Bool(
                            false,
                        ),
                        Bool(
                            true,
                        ),
                    ),
                ),
                Bool(
                    false,
                ),
            ),
        ),
        Var(
            Ident(
                "b",
            ),
            Infix(
                Or,
                Infix(
                    Or,
                    Bool(
                        true,
                    ),
                    Infix(
                        And,
                        Bool(
                            false,
                        ),
                        Bool(
                            true,
                        ),
                    ),
                ),
                Bool(
                    false,
                ),
            ),
        ),
        Var(
            Ident(
                "c",
            ),
            Infix(
                And,
                Prefix(
                    Not,
                    Bool(
                        true,
                    ),
                ),
                Prefix(
                    Not,
                    Bool(
                        false,
                    ),
                ),
            ),
        ),
    ],
)
