src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__loops.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

loop {
  continue
  break
}


OK
Root(
    [
        Loop(
            [
                StmtExpr(
                    Continue,
                ),
                StmtExpr(
                    Break,
                ),
            ],
        ),
    ],
)
